garanti-labs/lab4-nonmesh/manifests/06-webhook-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-simulator
  namespace: ossm-playground-plain
  labels:
    app: webhook-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-simulator
  template:
    metadata:
      labels:
        app: webhook-simulator
    spec:
      containers:
        - name: webhook
          image: docker.io/nginxinc/nginx-unprivileged:1.25-alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: webhook-simulator-config
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-simulator
  namespace: ossm-playground-plain
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: webhook-simulator
