garanti-labs/lab4-nonmesh/manifests/03-serviceentry-httpbin.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: httpbin-plain
  namespace: ossm-playground-apps
spec:
  hosts:
    - httpbin.ossm-playground-plain.svc.cluster.local
  location: MESH_INTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
