garanti-labs/lab4-nonmesh/manifests/05-sidecar-allow-httpbin.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: productpage-egress-lab
  namespace: ossm-playground-apps
spec:
  workloadSelector:
    labels:
      app: productpage
  egress:
    - hosts:
        - "./*"
        - "istio-system/*"
        - "ossm-playground-plain/*"
